bases/prod/cast-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: cast-app
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: cast-app
  ports:
    - name: http
      port: 80
      targetPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cast-app
  labels:
    app.kubernetes.io/name: cast
    app.kubernetes.io/component: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: cast-app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: cast-app
        app.kubernetes.io/component: web
    spec:
      containers:
        - name: cast-app
          image: nginx:1.25
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
